--- a/mailexpress-ui/src/main/webapp/resources/css/main.css
+++ b/mailexpress-ui/src/main/webapp/resources/css/main.css
@@ -36,6 +36,10 @@ body {
     text-align: center;
 }
 
+.errorMessage {
+    color: #FF0011;
+}
+
 .rf-tb {
     height: 35px;
 }
@@ -86,4 +90,12 @@ div *.rf-tab-cnt {
 
 table {
     width: 100%;
+}
+
+label {
+    font-weight: bolder;
+}
+
+.message-list {
+    height: 200px;
 }
