--- a/mailexpress-ui/src/main/webapp/resources/css/layout-default.css
+++ b/mailexpress-ui/src/main/webapp/resources/css/layout-default.css
@@ -69,6 +69,7 @@ body {
  *	RESIZER-BARS
  */
 .ui-layout-resizer	{ /* all 'resizer-bars' */
+    height: 5px;
 	background:		#DDD;
 	border:			1px solid #BBB;
 	border-width:	0;
